# server/internal/infrastructure/handler/rest/group.go
@@ -76,7 +76,6 @@ type JoinGroupInput struct {
 //	@Tags			groups
 //	@Param			group_id	path	string			true	"group_id"
 //	@Param			request		body	JoinGroupInput	true	"request"
-//	@Produce		json
 //	@Success		204
 //	@Router			/groups/{group_id} [post]
 func (g *group) JoinGroup(c *gin.Context) {
@@ -124,7 +123,6 @@ func (g *group) GetGroupMembers(c *gin.Context) {
 //	@Tags			groups
 //	@Param			group_id	path	string	true	"group_id"
 //	@Param			username	path	string	true	"username"
-//	@Produce		json
 //	@Success		204
 //	@Router			/groups/{group_id}/members/{username} [delete]
 func (g *group) LeaveGroup(c *gin.Context) {
@@ -137,4 +135,26 @@ func (g *group) LeaveGroup(c *gin.Context) {
 	}
 
 	c.Status(http.StatusNoContent)
+}
+
+// GetGroupMessages godoc
+//
+//	@Summary		get messages in group
+//	@Description	retrieve messages in group
+//	@Tags			groups
+//	@Param			group_id	path	string	true	"group_id"
+//	@Param			user		query	string	true	"user"
+//	@Produce		json
+//	@Success		200	{array}	domain.Message
+//	@Router			/groups/{group_id}/messages [get]
+func (g *group) GetGroupMessages(c *gin.Context) {
+	username := c.Query("user")
+	groupId := uuid.MustParse(c.Param("group_id"))
+	messages, err := g.groupService.GetGroupChatMessages(groupId, username)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, &errorResponse{Error: err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, messages)
 }
